force-app/main/default/objects/SVMXC__SM_Change_Order__c/SVMXC__SM_Change_Order__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Change Order object serves as a repository for user-created Field Change Orders (FCO), Modifications, or Recalls. Details specific to the Change Order itself are captured for identifying the FCO, such as the Change Order #, Start Date, Priority, and FCO Type. This object has a relationship with FCO Required Parts, Change Order Search, and Change Order Result objects.</description>
    <label>Change Order</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>CO Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>