force-app/main/default/objects/SVMXC__SM_Change_Order__c/fields/SVMXC__SM_CORD_Config__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_CORD_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate the configuration template with the Change Order.</description>
    <inlineHelpText>This field is used to associate the configuration template with the Change Order.</inlineHelpText>
    <label>Change Order Configuration</label>
    <referenceTo>SVMXC__SM_Change_Order_Configuration__c</referenceTo>
    <relationshipLabel>Change Orders</relationshipLabel>
    <relationshipName>Change_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>