force-app/main/default/objects/SVMXC__SM_Change_Order__c/fields/SVMXC__SM_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Start_Date__c</fullName>
    <description>This field is used to indicate the starting date of a Change Order.</description>
    <inlineHelpText>This field is used to indicate the starting date of a Change Order.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>