force-app/main/default/objects/SVMXC__SM_Change_Order__c/fields/SVMXC__SM_Top_Level_IBs_Only__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Top_Level_IBs_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox indicates whether an IB search performed on a Change Order will search the Top-Level Installed Product records only (true), or if the search will review all installed product records (false).</description>
    <inlineHelpText>This checkbox indicates whether an IB search performed on a Change Order will search the Top-Level Installed Product records only (true), or if the search will review all installed product records (false).</inlineHelpText>
    <label>Search for Top Level IBs Only</label>
    <type>Checkbox</type>
</CustomField>